{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 14,
  "lineage": "9d4e9677-6acf-d11c-b7f9-0f2aaa0dd67f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:route-table/rtb-0bef07666e0718710",
            "default_route_table_id": "rtb-0bef07666e0718710",
            "id": "rtb-0bef07666e0718710",
            "owner_id": "230020307145",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04b1329d71416b6ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "timeouts": null,
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.my-nat",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040abf0c6f235ad29",
            "domain": "vpc",
            "id": "eipalloc-040abf0c6f235ad29",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-132-99.compute-1.amazonaws.com",
            "public_ip": "54.156.132.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:internet-gateway/igw-05863f3143cf2bc1f",
            "id": "igw-05863f3143cf2bc1f",
            "owner_id": "230020307145",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040abf0c6f235ad29",
            "association_id": "eipassoc-07d03e9909614a80e",
            "connectivity_type": "public",
            "id": "nat-04b1329d71416b6ac",
            "network_interface_id": "eni-077b2d725dc87703f",
            "private_ip": "10.0.4.139",
            "public_ip": "54.156.132.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ba3085d31e417cd",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            }
          },
          "dependencies": [
            "aws_eip.my-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:route-table/rtb-002a205708b849943",
            "id": "rtb-002a205708b849943",
            "owner_id": "230020307145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05863f3143cf2bc1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "timeouts": null,
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f95d22c3fc57d922",
            "route_table_id": "rtb-002a205708b849943",
            "subnet_id": "subnet-08ba3085d31e417cd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.my-rtb",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048f99d08a3bd55ef",
            "route_table_id": "rtb-002a205708b849943",
            "subnet_id": "subnet-04177a5040504e9f3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.my-rtb",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-01cd296540c3dfabd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cd296540c3dfabd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-0687db17e6f5f9e71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0687db17e6f5f9e71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-04177a5040504e9f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04177a5040504e9f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-08ba3085d31e417cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ba3085d31e417cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            },
            "vpc_id": "vpc-026468f4e93a2ca68"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:vpc/vpc-026468f4e93a2ca68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a611d11bf8b6ab1",
            "default_route_table_id": "rtb-0bef07666e0718710",
            "default_security_group_id": "sg-01a65cbb3d05f7f64",
            "dhcp_options_id": "dopt-0845c17760b1fad64",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026468f4e93a2ca68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bef07666e0718710",
            "owner_id": "230020307145",
            "tags": {
              "Name": "test-ing"
            },
            "tags_all": {
              "Name": "test-ing"
            }
          }
        }
      ]
    }
  ]
}